--- a/app/src/main/res/layout/activity_busca.xml
+++ b/app/src/main/res/layout/activity_busca.xml
@@ -12,10 +12,9 @@
         android:id="@+id/listViewID"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/tv_resultadoID"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="86dp" />
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:id="@+id/editTextBuscaID"
@@ -39,5 +38,14 @@
         android:layout_marginStart="21dp"
         android:layout_toRightOf="@+id/editTextBuscaID"
         android:text="Buscar" />
+
+    <TextView
+        android:id="@+id/tv_resultadoID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/botaoBuscaID"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:textColor="@android:color/black" />
 
 </RelativeLayout>
