--- a/app/src/main/res/layout/activity_cadastro_necessidade.xml
+++ b/app/src/main/res/layout/activity_cadastro_necessidade.xml
@@ -1,20 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:contexto="com.thelearningproject.applogin.infraestrutura.gui.CadastroMateriaActivity">
+    tools:context="com.thelearningproject.applogin.infraestrutura.gui.CadastroNecessidadeActivity">
 
-    <Button
-        android:id="@+id/BotaoCadastraMateriaID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Inserir"
-        tools:layout_editor_absoluteX="140dp"
-        tools:layout_editor_absoluteY="189dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
 
     <EditText
         android:id="@+id/entradaMateriaID"
@@ -29,4 +19,13 @@
         android:gravity="center"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/BotaoInsereHabilidadeID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="Inserir" />
+
 </RelativeLayout>
