--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/config"
-        android:layout_marginBottom="88dp"
         android:layout_above="@+id/btnChamar"
         android:layout_centerHorizontal="true" />
 
@@ -30,17 +29,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Buscar"
-        android:layout_marginBottom="12dp"
-        android:layout_above="@+id/BotaoCadastraMateriaID"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:id="@+id/BotaoCadastraMateriaID"
+        android:id="@+id/BotaoInsereHabilidadeID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Inserir habilidade"
-        android:layout_marginBottom="10dp"
-        android:layout_above="@+id/configID"
+        android:layout_below="@+id/botaoBuscaID"
         android:layout_centerHorizontal="true" />
 
     <Button
@@ -56,5 +53,14 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="13dp" />
+
+    <Button
+        android:id="@+id/BotaoInsereNecessidadeID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:text="Inserir necessidade"
+        android:layout_above="@+id/configID"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
