--- a/app/src/main/res/layout/activity_necessidade.xml
+++ b/app/src/main/res/layout/activity_necessidade.xml
@@ -1,56 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
     tools:contexto=".usuario.gui.CadastroActivity">
 
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/logo"
-        android:scaleType="fitXY"
-        android:layout_marginTop="29dp"
-        android:id="@+id/imageView2"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="25dp">
 
-    <EditText
-        android:id="@+id/necessidadeentrada"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/necessidade"
-        android:layout_centerHorizontal="true"
-        android:ems="12"
-        android:gravity="center"
-        android:hint="@string/dica1"
-        android:inputType="text"
-        android:textColorHint="@color/textgray" />
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:scaleType="fitXY"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/logo"
+            android:contentDescription="@string/app_name"/>
 
-    <Button
-        android:id="@+id/botaoContinuar3"
-        style="@style/btn_white"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:textSize="14sp"
-        android:textColor="@color/colorPrimary"
-        android:text="@string/continuar"
-        android:layout_marginTop="47dp"
-        android:layout_below="@+id/necessidadeentrada"
-        android:layout_centerHorizontal="true" />
+        <TextView
+            android:id="@+id/necessidade"
+            style="@style/dicaCadastro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dica2"
+            android:layout_marginTop="20dp" />
 
-    <TextView
-        android:id="@+id/necessidade"
-        style="@style/camposTexto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/necessidades"
-        android:layout_marginTop="50dp"
-        android:layout_below="@+id/imageView2"
-        android:layout_centerHorizontal="true" />
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_nec"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/textWhite">
 
-</RelativeLayout>
+            <EditText
+                android:id="@+id/necessidadeentrada"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:textColor="@color/textWhite"
+                android:hint="@string/cadastrarNecessidade"
+                android:textSize="20sp"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/botaoContinuar3"
+            style="@style/btn_white"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="@string/continuar"
+            android:layout_marginTop="30dp" />
+
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
