--- a/app/src/main/res/layout/fragment_main_busca.xml
+++ b/app/src/main/res/layout/fragment_main_busca.xml
@@ -11,20 +11,13 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/editTextBuscaID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="12"
-            android:inputType="textPersonName" />
-
-        <Button
-            android:id="@+id/botaoBuscaID"
+        <AutoCompleteTextView
+            android:id="@+id/autoBuscaID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="21dp"
-            android:layout_marginStart="21dp"
-            android:text="@string/bottom_nav_title2" />
+            android:ems="12"
+            android:inputType="textPersonName"
+            />
 
     </LinearLayout>
 
