--- a/app/src/main/res/menu/pesquisar_menu.xml
+++ b/app/src/main/res/menu/pesquisar_menu.xml
@@ -6,5 +6,6 @@
         android:title="@string/bottom_nav_title2"
         app:showAsAction="always"
         android:icon="@drawable/ic_search_white_24dp"
+        app:actionViewClass="android.support.v7.widget.SearchView"
         />
 </menu>
