--- a/app/src/main/res/layout/fragment_main_busca.xml
+++ b/app/src/main/res/layout/fragment_main_busca.xml
@@ -16,8 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="12"
-            android:inputType="textPersonName"
-            />
+            android:inputType="textPersonName" />
 
     </LinearLayout>
 
