--- a/app/src/main/res/layout/fragment_main_perfil.xml
+++ b/app/src/main/res/layout/fragment_main_perfil.xml
@@ -17,6 +17,7 @@
             android:layout_height="120dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+            android:contentDescription="@string/nome"
             android:src="@drawable/circle" />
 
     </RelativeLayout>
