--- a/app/src/main/res/layout/lista_materia.xml
+++ b/app/src/main/res/layout/lista_materia.xml
@@ -21,6 +21,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:background="@color/transparent"
+        android:contentDescription="@string/botaoExcluir"
         android:padding="8dp"
         android:src="@drawable/ic_delete_black_24dp" />
 </RelativeLayout>
