--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -69,7 +69,23 @@
 
 	</android.support.design.widget.TextInputLayout>
 
-	<Button
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_telefone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
+
+        <EditText
+            android:id="@+id/telefoneEntradaID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/telefone"
+            android:inputType="phone"
+            android:textSize="20sp" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <Button
 		android:id="@+id/botaoCadastroID"
 		style="@style/btn_white"
 		android:layout_width="fill_parent"
@@ -77,7 +93,7 @@
 		android:paddingLeft="10dp"
 		android:paddingRight="10dp"
 		android:text="@string/cadastrar"
-		android:layout_marginTop="40dp" />
+		android:layout_marginTop="10dp" />
 
 </LinearLayout>
 
