--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,14 +12,14 @@
         android:orientation="vertical"
         android:padding="25dp">
 
-        <ImageView
+        <!--<ImageView
             android:id="@+id/imageView2"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:scaleType="fitXY"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/logo"
-            android:contentDescription="@string/app_name"/>
+            android:contentDescription="@string/app_name"/>-->
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_email"
@@ -70,6 +70,7 @@
             android:text="@string/login"
             android:layout_marginTop="30dp" />
 
+
         <View style="@style/Divider"/>
 
         <Button
@@ -83,6 +84,12 @@
             android:background="@drawable/button_stroke"
             android:text="@string/cadastrar"
             android:layout_marginTop="20dp" />
+
+        <Button
+            android:id="@+id/btEsqueci"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Esqueceu sua senha?" />
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
