--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,6 +13,12 @@
         />
 
     <item
+        android:id="@+id/menu_interacoes"
+        android:title="@string/bottom_nav_title4"
+        android:icon="@drawable/ic_grade_black_24dp"
+        />
+
+    <item
         android:id="@+id/menu_perfil"
         android:title="@string/bottom_nav_title3"
         android:icon="@drawable/ic_person_black_24dp"
