--- a/app/src/main/res/layout/activity_cadastro_habilidade.xml
+++ b/app/src/main/res/layout/activity_cadastro_habilidade.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp">
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/entradaMateriaID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
